# solana-stablecoin-standard

./: .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  tsconfig.json
backend/: .env.example  Dockerfile  docker-compose.yml  package.json  tsconfig.json
backend/src/: config.ts  health.ts  index.ts  logger.ts
backend/src/db/: index.ts  schema.ts
backend/src/routes/: admin.ts  compliance.ts  webhooks.ts
backend/src/services/: compliance.ts  event-listener.ts  mint-burn.ts  webhook.ts
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  DEPLOYMENT.md  ERRORS.md  EVENTS.md  OPERATIONS.md  ORACLE.md  PATTERNS.md  README.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  TESTING.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/components/: NavBar.tsx  StatCard.tsx
modules/sss-compliance/: Cargo.toml
modules/sss-compliance/src/: lib.rs
modules/sss-math/: Cargo.toml
modules/sss-math/src/: lib.rs
modules/sss-oracle/: Cargo.toml
modules/sss-oracle/src/: lib.rs
modules/sss-roles/: Cargo.toml
modules/sss-roles/src/: lib.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: blacklist.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  seize.rs  thaw_account.rs  transfer_authority.rs  update_minter.rs  update_roles.rs  view.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: error.rs  lib.rs  state.rs
programs/sss-transfer-hook/src/instructions/: execute.rs  fallback.rs  initialize.rs  mod.rs
sdk/core/: package.json
sdk/core/src/: compliance.ts  index.ts  pda.ts  presets.ts  stablecoin.ts  types.ts
sdk/core/src/cli/: config.ts  index.ts
sdk/core/tests/: pda.test.ts  presets.test.ts  types.test.ts
sdk/privacy/: package.json  tsconfig.json
sdk/privacy/src/: allowlist.ts  confidential.ts  index.ts  proofs.ts
sdk/privacy/tests/: allowlist.test.ts  proofs.test.ts
tests/: edge-cases.ts  multi-user.ts  roles.ts  sss-1.ts  sss-2.ts  transfer-hook.ts
tests/helpers/: assertions.ts  setup.ts
tui/: package.json  tsconfig.json
tui/src/: dashboard.ts  data.ts  index.ts  theme.ts
(+11 files in other folders)
