[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard — Transfer Hook for Blacklist Enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["interface-instructions"] }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
sss-compliance = { path = "../../modules/sss-compliance" }
